--- a/assets/package.json
+++ b/assets/package.json
@@ -34,6 +34,7 @@
     "is-svg": ">=4.3.0",
     "js-yaml": ">=3.13.1",
     "json-schema": ">=0.4.0",
+    "loader-utils": "^1.4.2",
     "lodash": ">=4.17.21",
     "mini-css-extract-plugin": "^1.3.1",
     "minimist": ">=1.2.3",
